持续更新模块

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#22A0DB</color>
-    <color name="colorAccent">#22A0DB</color>
-    <color name="colorPrimary">#22A0DB</color>
+    <color name="colorPrimaryDark">#3577C5</color>
+    <color name="colorAccent">#3577C5</color>
+    <color name="colorPrimary">#3577C5</color>
     <color name="white">#ffffff</color>
 </resources>
