--- a/time-work-selector/src/main/res/layout/dialog_selector.xml
+++ b/time-work-selector/src/main/res/layout/dialog_selector.xml
@@ -167,6 +167,10 @@
         </RelativeLayout>
 
     </LinearLayout>
+    <View
+        android:id="@+id/nav_bar"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"/>
 
 
 </LinearLayout>
