--- a/time-work-selector/src/main/res/layout/dialog_selector.xml
+++ b/time-work-selector/src/main/res/layout/dialog_selector.xml
@@ -3,13 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:orientation="vertical">
+    <View
+        android:id="@+id/alpha"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -170,7 +175,8 @@
     <View
         android:id="@+id/nav_bar"
         android:layout_width="match_parent"
-        android:layout_height="0dp"/>
+        android:layout_height="0dp"
+        android:background="@color/white"/>
 
 
 </LinearLayout>
