--- a/time-work-selector/src/main/res/layout/dialog_selector.xml
+++ b/time-work-selector/src/main/res/layout/dialog_selector.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-    <View
-        android:id="@+id/alpha"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
-
-    <LinearLayout
+    android:id="@+id/background">
+    <spa.lyh.cn.lib_utils.view.layout.FitLinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="@color/white">
+        app:llFitBottom="true"
+        android:background="@color/white"
+        android:layout_alignParentBottom="true"
+        android:clickable="true">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#ffffff"
             android:paddingLeft="20dp"
             android:paddingRight="20dp"
             android:paddingTop="10dp"
@@ -171,12 +167,5 @@
 
         </RelativeLayout>
 
-    </LinearLayout>
-    <View
-        android:id="@+id/nav_bar"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="@color/white"/>
-
-
-</LinearLayout>
+    </spa.lyh.cn.lib_utils.view.layout.FitLinearLayout>
+</RelativeLayout>
