--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/colorPrimary"
-    app:llFitTop="true">
+    app:fitTop="true">
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
