--- a/time-work-selector/src/main/res/layout/dialog_selector.xml
+++ b/time-work-selector/src/main/res/layout/dialog_selector.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:llFitBottom="true"
+        app:fitBottom="true"
         android:background="@color/white"
         android:layout_alignParentBottom="true"
         android:clickable="true">
